kubernetes/apps/dev/forgejo/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  labels:
    app: forgejo
spec:
  selector:
    matchLabels:
      app: forgejo
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
      - name: forgejo
        image: codeberg.org/forgejo/forgejo:8
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 2000m
            memory: 1000Mi
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
          - name: ssh
            containerPort: 2222
          - name: http
            containerPort: 3000
        volumeMounts:
          - name: temp
            mountPath: /tmp
          - name: data
            mountPath: /data
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data-claim
        - name: init
          secret:
            secretName: forgejo-init
            defaultMode: 110
        # - name: config
        #   secret:
        #     secretName: forgejo
        #     defaultMode: 110
        # - name: inline-config-sources
        #   secret:
        #     secretName: forgejo-inline-config
        - name: temp
          emptyDir: {}
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
