kubernetes/apps/dev/forgejo/app/http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-http
spec:
  selector:
    app: forgejo-http
  type: ClusterIP
  ports:
  - name: forgejo-http
    protocol: TCP
    port: 3000
    targetPort: 3000
