kubernetes/apps/dev/forgejo/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-https-route
  namespace: dev
spec:
  hostnames:
    - git.schwarz47.at
  parentRefs:
    - name: cilium-gateway
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: forgejo-http
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
