kubernetes/apps/dev/forgejo/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-https-route
  namespace: dev
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: network
  hostnames:
  - "git.schwarz47.at"
  rules:
  - backendRefs:
    - name: forgejo-http
      port: 3000
